Modified the buttons to connect it to the correct sections.

--- a/index2.html
+++ b/index2.html
@@ -28,10 +28,8 @@
     </div>
 
     <div id="menu" class="buttons-section">
-      <button class="buttons" id="identifying-fakes-button">Identifying Fakes</button>
-      <button class="buttons" id="alibi-generator-button">Alibi Generator</button>
-        <!-- <button class="btn btn-primary btn-lg mx-2" onclick="showModule('learnModule')">Identifying Fakes</button>
-        <button class="btn btn-success btn-lg mx-2" onclick="showModule('protectModule')">Alibi Generator</button> -->
+      <button class="buttons" id="identifying-fakes-button" onclick="showModule('learnModule')">Identifying Fakes</button>
+      <button class="buttons" id="alibi-generator-button" onclick="showModule('protectModule')">Alibi Generator</button>
     </div>
 
     <div id="learnModule" class="module-container" style="display: none;">
