--- a/index2.html
+++ b/index2.html
@@ -12,7 +12,7 @@
 
     <div class="header-section">
         <h1>&#10210 Nexus &#10211</h1>
-        <a class="dark-mode-moon-icon" href="#" target="blank"><i class="fas fa-moon"></i></a>
+        <a class="home-icon" href="index2.html"><i class="fas fa-home"></i></a>
     </div>
 
     <div id="menu" class="introduction-section">
