--- a/index2.html
+++ b/index2.html
@@ -32,9 +32,9 @@
         <h2>Deepfake Detective Quiz</h2>
         <div id="quiz-content"></div>
         <div id="quiz-feedback" class="mt-3"></div>
-        <div class="text-center mt-4">
+        <!-- <div class="text-center mt-4">
             <button class="buttons" onclick="showModule('menu')">Back to Home</button>
-        </div>
+        </div> -->
     </div>
 
     <div id="protectModule" class="introduction-section" style="display: none;">
@@ -49,9 +49,9 @@
         <h3 class="mt-5">Your Alibi Log</h3>
         <ul id="alibi-log" class="list-group">
             </ul>
-        <div class="text-center mt-4">
+        <!-- <div class="text-center mt-4">
             <button class="buttons" onclick="showModule('menu')">Back to Home</button>
-        </div>
+        </div> -->
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/exif-js"></script>
