Fixed log aesthetics

--- a/index2.html
+++ b/index2.html
@@ -38,8 +38,8 @@
     </div>
 
     <div id="protectModule" class="introduction-section" style="display: none;">
-        <h2>AI Alibi Generator</h2>
-        <p>Authenticate a photo with a secure, timestamped, and location-verified proof.</p>
+        <h2>Alibi Generator</h2>
+        <p>Authenticate a photo with a secure, timestamped, and location-verified key.</p>
         
         <div class="text-center mt-3">
             <input type="file" id="image-upload" accept="image/*" class="form-control mb-3">
