Reformatted the authenticate file button

--- a/index2.html
+++ b/index2.html
@@ -41,12 +41,12 @@
         <h2>Alibi Generator</h2>
         <p>Authenticate a photo with a secure, timestamped, and location-verified key.</p>
         
-        <div class="text-center mt-3">
-            <input type="file" id="image-upload" accept="image/*" class="form-control mb-3">
-            <button id="alibi-button" class="buttons" disabled>Authenticate File</button>
+        <div class="auth-controls">
+          <input type="file" id="image-upload" accept="image/*" class="form-control">
+          <button id="alibi-button" class="buttons" disabled>Authenticate File</button>
         </div>
         
-        <h3 class="mt-5">Your Alibi Log</h3>
+        <h3 class="mt-2">Your Alibi Log</h3>
         <ul id="alibi-log" class="list-group">
             </ul>
         <!-- <div class="text-center mt-4">
