Fixed up home page

--- a/index2.html
+++ b/index2.html
@@ -17,10 +17,11 @@
 
     <div id="menu" class="introduction-section">
         <h2>Our Vision and Goal</h2>
-        <p>In today's digital world, the line between reality and artificial creation is becoming increasingly blurred, making the skill of critical discernment more essential than ever. We've designed our platform to offer a two-pronged approach: first education, then protection.</p>
+        <p>In today's digital world, the line between reality and artificial creation is becoming increasingly blurred, making the skill discerning between the two essential. We've designed our platform to offer a two-step approach: first education, then protection.</p>
         <h3>Learn to Spot Fakes</h3>
-        <p>This is your training ground. We invite you to sharpen your instincts through our curated, interactive quiz designed to reveal the subtle imperfections of even the most sophisticated deepfakes. By engaging with real-world examples in a hands-on environment, you will develop the confidence and the critical eye needed to navigate the complexities of the modern media landscape and identify digital deception.
-        </p>
+        <p>This is your training ground where we invite you to sharpen your instincts through our interactive quiz designed to reveal the subtle imperfections of even the most sophisticated deepfakes.</p>
+        <h3>Create Your Alibi</h3>
+        <p>Protect your reputation against deepfakes and misinformation. Upload an authentic photo to generate a secure, timestamped, and location-verified key. This creates a powerful, irrefutable record to prove your presence and validate your story when it matters most.</p>
         
         <div class="buttons-section">
             <button class="buttons" id="identifying-fakes-button" onclick="showModule('learnModule')">Identifying Fakes</button>
